# atmospheric-model

./: LICENSE  README.md  ROADMAP.md  pyproject.toml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
examples/: altitude_profile.py  basic_example.py  generate_all_plots.py
images/tests/: test_atmosphere.py
src/atmospheric_model/: atmosphere.py  constants.py  profiles.py  utils.py
src/atmospheric_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_atmosphere.py
