[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atmospheric-model"
version = "1.0.0"
description = "International Standard Atmosphere (ISA) model for aerospace engineering."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Elisabeth Mcnegera" }
]

dependencies = [
    "matplotlib",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]